# dagplan

./: Cargo.toml  flake.nix  notes
src/: main.rs  slot.rs
