[package]
name = "dagplan"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28.1"
humantime = "2.2.0"
libnotify = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
vedvaring = "0.2.2"
