[package]
name = "dagplan"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28.1"
dirs = "6.0.0"
humantime = "2.2.0"
nonempty = "0.12.0"
notify-rust = "4.11.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
vedvaring = "0.2.2"
